# django-learning

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
api/: settings.py
app/: api.py  asgi.py  settings.py  urls.py  wsgi.py
app/configurations/: mailhog.py  pyjwt.py  redis.py
backend/: manage.py
backend/app/: celery.py  settings.py  urls.py
backend/app/configurations/: celery.py  mailhog.py  pyjwt.py
backend/permissions/: permissions.py
backend/projects/: admin.py  api.py  commands.py  models.py  queries.py  tasks.py
backend/projects/migrations/: 0001_initial.py  0002_alter_task_managers.py  0003_task_overdue_notification_sent_and_more.py  0004_taskattachment.py
backend/users/: api.py  commands.py  queries.py  tests.py
permissions/: permissions.py
projects/: admin.py  api.py  commands.py  exceptions.py  models.py  permissions.py  queries.py
projects/migrations/: 0001_initial.py  0002_alter_project_options_task.py
users/: admin.py  api.py  auth_token.py  commands.py  exceptions.py  managers.py  models.py  queries.py  schemas.py  tests.py  utils.py
users/migrations/: 0001_initial.py  0002_user_is_staff_user_is_superuser.py  0003_user_groups_user_user_permissions.py  0004_alter_user_is_active.py
